# Wavix

./: .gitignore  Dockerfile  LICENSE.md  README.md
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
Wavix/: .clang-format  CMakeLists.txt  errno.h  file.cpp  file.h  memory.cpp  process.cpp  process.h  run-clang-format.sh  wavix.cpp  wavix.h
bash/: build-wavix-bash.sh  configure  externs.h  shell.c  unwind_prot.h
bash/support/: config.sub
bootstrap/: build.py  buildbot.py  compile_torture_tests.py  execute_files.py  file_util.py  link_assembly_files.py  proc.py  testing.py  wasm_standalone.cmake  wavix_toolchain.cmake
bootstrap/test/: lld_known_gcc_test_failures.txt  run_known_gcc_test_failures.txt
coreutils/: .timestamp  ChangeLog  Makefile.in  THANKS  THANKS-to-translators  aclocal.m4  build-wavix-coreutils.sh  configure
coreutils/build-aux/: config.sub  gnupload
coreutils/doc/: coreutils.info  stamp-vti
coreutils/gnulib-tests/: Makefile.in  gnulib.mk  localename.c  localename.h
coreutils/lib/: alignof.h  arpa_inet.in.h  asprintf.c  base32.c  base32.h  base64.c  base64.h  c-strcaseeq.h  config.hin  fd-hook.c  fd-hook.h  fseeko.c  gai_strerror.c  getaddrinfo.c  getpass.c  getpass.h  getprogname.c  getprogname.h  gnulib.mk  iconv.c  iconv.in.h  iconv_close.c  iconv_open.c  inet_ntop.c  link.c  lseek.c  memcmp2.c  memcmp2.h  netdb.in.h  netinet_in.in.h  nproc.c  nproc.h  obstack.c  obstack.h  parse-datetime.c  pipe.c  pthread.in.h  read-file.c  read-file.h  (+23 more)
libcxx/: CMakeLists.txt
libcxxabi/: CMakeLists.txt  libc++abi.imports
musl/: README.md  libc.py
(+254 files in other folders)
